[workspace]
members = ["crates/aribcaption-sys", "crates/aribcaption"]
resolver = "2"

[package]
name = "captu"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "extract"
path = "src/bin/extract.rs"

[[bin]]
name = "ingest_cli"
path = "src/bin/ingest_cli.rs"


[dependencies]
# Web
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Template (compile-time validation)
# askama_axum was deprecated; IntoResponse is handled by routes::HtmlTemplate.
askama = "0.16"

# DB (compile-time query validation)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros", "migrate"] }

# Config
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Scheduling — TODO(Phase5): wire up periodic ingest via tokio-cron-scheduler
tokio-cron-scheduler = "0.15"

# LLM — TODO(Phase7): wire up AI search via reqwest + Gemini/Anthropic
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
# async-trait removed: unused in current codebase (re-add when Phase7 LLM trait is wired up)

# String normalization
unicode-normalization = "0.1"

# ARIB subtitle rendering (PES demux + libaribcaption FFI)
aribcaption = { path = "crates/aribcaption" }

# Utilities
glob = "0.3"
png = "0.18"
postcard = { version = "1", features = ["alloc"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"

[workspace.metadata.release]
# Never publish to crates.io — this is a private application.
publish = false
tag-name = "v{{version}}"
# Commit and tag only; push is done by scripts/release.sh from the host
# where git credentials live.
push = false
sign-tag = false
pre-release-commit-message = "update: release v{{version}}"
